--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta property="og:title" content="르탄이 - 프로필 링크" />
-        <meta property="og:description" content="어서와 코딩은 처음이지?" />
-        <meta property="og:image" content="공유할 이미지" />
+        <meta property="og:title" content="찬이 - 프로필 링크" />
+        <meta property="og:description" content="어서와 이런 귀여움은 처음이지?" />
+        <meta property="og:image" content="찬이.jpg" />
         <title>르탄이 - 프로필 링크</title>
         <style>
             @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
@@ -26,9 +26,9 @@
 
                 border: 2px solid white;
 
-                background-image: url(롸.png);
-                background-position: ;
-                background-size: ;
+                background-image: url(찬이.jpg);
+                background-position:center ;
+                background-size: cover;
             }
             .main{
                 color: white;
